refactor: 딜러와 플레이어를 하나의 리스트로 관리